--- a/servoo_sales/views/sale_views.xml
+++ b/servoo_sales/views/sale_views.xml
@@ -6,6 +6,9 @@
             <field name="model">sale.order</field>
             <field name="inherit_id" ref="sale.view_order_form" />
             <field name="arch" type="xml">
+                <field name="partner_id" position="before">
+                    <field name="agency_name" required="1" />
+                </field>
                 <field name="note" position="after">
                     <label for="amount_total_letter" string="Stopped this invoice for the sum" colspan="2"/>
                     <field name="amount_total_letter" readonly="1" nolabel="1" colspan="2"/>
