--- a/servoo_sales/views/account_move_views.xml
+++ b/servoo_sales/views/account_move_views.xml
@@ -6,8 +6,13 @@
             <field name="model">account.move</field>
             <field name="inherit_id" ref="account.view_move_form" />
             <field name="arch" type="xml">
-                <field name="partner_id" position="before">
+                <field name="invoice_origin" position="before">
                     <field name="agency_name" required="1" />
+                    <field name="department_id" readonly="1" attrs="{'invisible': [('move_type', '!=', 'in_invoice')]}"  />
+<!--                    <field name="sale_order_template_id" context="{'company_id': company_id}"-->
+<!--                    options="{'no_create': True, 'no_open': True}"-->
+<!--                    groups="sale_management.group_sale_order_template"-->
+<!--                />-->
                 </field>
                 <field name="payment_reference" position="replace" />
                 <field name="narration" position="after">
@@ -22,7 +27,7 @@
                         </div>
                 </field>
                 <notebook position="before">
-                    <group col="4">
+                    <group col="4" attrs="{'invisible': [('move_type', '!=', 'out_invoice')]}">
                         <field name="loading_place_id" />
                         <field name="unloading_place_id" />
                         <field name="transport_means_id" />
@@ -38,9 +43,35 @@
                         <field name="custom_declaration_reference" />
                         <field name="custom_declaration_date" />
                         <field name="number_of_packages" />
+                    </group>
+                    <group>
                         <field name="object" colspan="4"/>
                     </group>
                 </notebook>
+                <field name="state" position="replace">
+                    <field name="state" widget="statusbar" statusbar_visible="draft,posted" attrs="{'invisible': [('move_type', '!=', 'out_invoice')]}"/>
+                    <field name="state" widget="statusbar" statusbar_visible="draft,direction_routing,department_approval,direction_approval,accounting_approval,management_control_approval,in_payment" attrs="{'invisible': [('move_type', '!=', 'in_invoice')]}"/>
+                </field>
+                <button name="action_post" position="after">
+                    <button name="action_submit" class="oe_highlight" string="Send to Direction" type="object"
+                            groups="servoo_sales.group_supplier_invoice_admissibility"
+                            states="draft" attrs="{'invisible': ['|',('move_type', '!=', 'in_invoice'), ('state', '!=', 'draft')]}" />
+                    <button name="%(action_wizard_supplier_invoice)d" string="Send to Department" class="oe_highlight" type="action"
+                            groups="servoo_sales.group_supplier_invoice_general_direction"
+                            attrs="{'invisible': ['|',('move_type', '!=', 'in_invoice'), ('state', '!=', 'direction_routing')]}" />
+                    <button name="%(action_wizard_supplier_invoice)d" string="Approve" class="oe_highlight" type="action"
+                            groups="servoo_sales.group_supplier_invoice_department"
+                            attrs="{'invisible': ['|',('move_type', '!=', 'in_invoice'), ('state', '!=', 'department_approval')]}" />
+                    <button name="%(action_wizard_supplier_invoice)d" string="Approve" class="oe_highlight" type="action"
+                            groups="servoo_sales.group_supplier_invoice_general_direction"
+                            attrs="{'invisible': ['|',('move_type', '!=', 'in_invoice'), ('state', '!=', 'direction_approval')]}" />
+                    <button name="%(action_wizard_supplier_invoice)d" string="Put in payment" class="oe_highlight" type="action"
+                            groups="servoo_sales.group_supplier_invoice_accounting"
+                            attrs="{'invisible': ['|',('move_type', '!=', 'in_invoice'), ('state', '!=', 'accounting_approval')]}" />
+                    <button name="%(action_wizard_supplier_invoice)d" string="Approve" class="oe_highlight" type="action"
+                            groups="servoo_sales.group_supplier_invoice_management_control"
+                            attrs="{'invisible': ['|',('move_type', '!=', 'in_invoice'), ('state', '!=', 'management_control_approval')]}" />
+                </button>
             </field>
         </record>
 </odoo>
